# DevAssist

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  debug_transform.py  pyproject.toml  test_migration.py  test_workflow_direct.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.test  docker-compose.yml
docker/scripts/: start-mcp.py
frontend/: .env.local.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CodeSnippet.tsx  DownloadResult.tsx  FileUpload.tsx  Header.tsx  MigrationProgress.tsx  RepoMigration.tsx  index.ts
frontend/src/types/: index.ts
src/devassist/: __init__.py  cli.py
src/devassist/agents/: __init__.py  coder.py  planner.py  tester.py  workflow.py
src/devassist/api/: __init__.py  main.py
src/devassist/ast_parser/: __init__.py  analyzer.py  patterns.py  transformers.py
src/devassist/core/: __init__.py  config.py  models.py
src/devassist/github/: __init__.py  manager.py  pr_generator.py
src/devassist/mcp/: __init__.py  client.py  server.py
src/devassist/migrations/: __init__.py  flask_to_fastapi.py  py2to3.py
test-repos/legacy-python2-app/: README.md  calculator.py  data_processor.py  flask_app.py  requirements.txt  user_manager.py  utils.py
test-repos/sample-data-analytics/: README.md  analyzer.py  sample_data.csv
test-repos/sample-database-util/: README.md  db_manager.py
test-repos/sample-file-processor/: README.md  processor.py
test-repos/sample-network-client/: README.md  client.py
test-repos/sample-web-scraper/: README.md  scraper.py
tests/: __init__.py  test_agents.py  test_ast_analyzer.py  test_github.py  test_migrations.py
